feat(devices): add new block devices and capabilities registration
- Add BlockHandlerHelper with template methods for wrapping block handlers
- Implement marker packet distribution using range-based player targeting
- Add entity manipulation package with teleport, flash movement and force application
- Create note block handlers for music and messaging functions
- Add world interaction handlers for enchanting, block editing and elemental effects
- Implement read/write package for sign text operations
- Register all new device capabilities to blocks and items in Capabilities class
- Update AGENTS.md documentation with project overview and coding standards
- Add proper error handling and range validation for entity movement operations